packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/kyverno-test/patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-access-allowed-pod
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: true
  containers:
    - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      name: test
---
apiVersion: v1
kind: Pod
metadata:
  name: api-access-denied-pod
  namespace: update-automountserviceaccounttokens-2
spec:
  automountServiceAccountToken: false
  containers:
    - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
      name: test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-access-allowed-deployment
  namespace: update-automountserviceaccounttokens-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-access-allowed-deployment
  template:
    metadata:
      labels:
        app: api-access-allowed-deployment
    spec:
      automountServiceAccountToken: true
      containers:
        - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
          name: test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: api-access-denied-statefulset
  namespace: update-automountserviceaccounttokens-2
spec:
  selector:
    matchLabels:
      app: api-access-denied-statefulset
  serviceName: api-access-denied-statefulset
  template:
    metadata:
      labels:
        app: api-access-denied-statefulset
    spec:
      automountServiceAccountToken: false
      containers:
        - image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
          name: test
