packages/kyvernoPolicies/chart/tests/mpol/update-automountserviceaccounttokens-cel/kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: update-automountserviceaccounttokens-cel
policies:
- ../policy.yaml
resources:
- resource.yaml
results:
- policy: update-automountserviceaccounttokens-cel
  rule: autogen-mutate
  resources:
  - api-access-allowed-pod
  - api-access-denied-pod
  - api-access-ignored-pod
  kind: Pod
  result: pass
- policy: update-automountserviceaccounttokens-cel
  rule: autogen-mutate
  resources:
  - api-access-allowed-deployment
  - api-access-ignored-deployment
  kind: Deployment
  result: pass
- policy: update-automountserviceaccounttokens-cel
  rule: autogen-mutate
  resources:
  - api-access-denied-statefulset
  kind: StatefulSet
  result: pass
